# graphatlas

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  deny.toml  install.sh  package.json  rust-toolchain.toml
crates/ga-bench/: Cargo.toml
crates/ga-bench/src/: error.rs  fixture_workspace.rs  git_pin.rs  leaderboard.rs  lib.rs  m1_ground_truth.rs  m2_ground_truth.rs  m2_markdown.rs  m2_runner.rs  m3_architecture.rs  m3_dead_code.rs  m3_hubs.rs  m3_minimal_context.rs  m3_rename_safety.rs  m3_risk.rs  m3_runner.rs  m3_score.rs  manifest.rs  mcp.rs  retriever.rs  runner.rs  score.rs  token_cost.rs
crates/ga-bench/tests/: _audit_dead_code_fp.rs  _diag_dead_code_fp.rs  _diag_risk_fp_fn.rs  audit_v4_schema.rs  cgc_retriever.rs  cgc_smoke.rs  cm_retriever.rs  cm_smoke.rs  ga_retriever_impact.rs  gt_gen.rs  is_test_path_lockstep_audit.rs  leaderboard.rs  m1_gate_callees_symbols_file_summary.rs  m2_07_recall_harness.rs  m2_audit.rs  m2_cochange_validate.rs  m2_extends_validate.rs  m2_gate_impact.rs  m2_head_clean_precondition.rs  m2_imports_transitive_validate.rs  m2_tests_edge_validate.rs  m2_text_intersect_validate.rs  m3_anti_tautology.rs  m3_architecture_score.rs  m3_atomic_write.rs  m3_cli.rs  m3_cli_policy_bias.rs  m3_dead_code_score.rs  m3_ha_import_edge.rs  m3_hd_ast.rs  m3_hmc_gitmine.rs  m3_hr_text.rs  m3_hrn_static.rs  m3_hubs_score.rs  m3_leaderboard_md.rs  m3_minimal_context_score.rs  m3_rename_safety_score.rs  m3_risk_score.rs  m3_score_helpers.rs  m3_sidecar.rs  (+11 more)
crates/ga-core/: Cargo.toml
crates/ga-core/src/: error.rs  lib.rs  types.rs
crates/ga-core/tests/: as003_demo.rs  data_model.rs  edge_type_references.rs  error.rs  lang.rs
crates/ga-index/: Cargo.toml  build.rs
crates/ga-index/examples/: diag_duplicate_symbols.rs  repro_alter_migration_real.rs  repro_copy_column_list.rs  repro_copy_fix_paths.rs  spike_blob_csv.rs  spike_lbug_cross_process.rs  spike_no_reader_flock.rs  spike_no_reader_flock_real_fixture.rs  spike_pr5c_composites.rs  spike_pr5c_store.rs  spike_timestamp_csv.rs  validate_v4_schema.rs
crates/ga-index/src/: cache.rs  generation.rs  lib.rs  lifecycle_helpers.rs  list.rs  lock.rs  log_lines.rs  metadata.rs  monorepo.rs  nuke.rs  root_hash.rs  schema.rs  store.rs
crates/ga-index/tests/: audit_bugs_fix.rs  cache.rs  cache_dir_env.rs  cache_lang_set_fingerprint.rs  cross_platform_arms.rs  lbug_lifecycle_close_rm_reopen.rs  lbug_lifecycle_cross_file_edge_integrity.rs  list.rs  metadata.rs  metadata_s003_migration.rs  monorepo.rs  multi_process_lock.rs  mvcc_stress.rs  pid_lock.rs  rebuild_log.rs  reindex_in_place.rs  rel_delete_parity.rs  schema.rs  schema_v4.rs  schema_v5.rs  staleness_generation.rs  store_open.rs  stub.rs  tracing_span.rs
crates/ga-mcp/: Cargo.toml
crates/ga-mcp/src/: compact.rs  context.rs  error.rs  handlers.rs  lib.rs  markdown.rs  telemetry.rs  types.rs  watcher.rs
crates/ga-mcp/tests/: error_codes.rs  error_taxonomy.rs  initialize.rs  pr_gap2_rename_safety_arity.rs  reindex_tool.rs  staleness_gate.rs  staleness_tier2.rs  stdio_integration.rs  store_brick_recovery.rs  stub.rs  tools_architecture.rs  tools_call.rs  tools_call_callees_wired.rs  tools_call_common_meta.rs  tools_call_file_summary_wired.rs  tools_call_impact_e2e.rs  tools_call_impact_empty_input.rs  tools_call_impact_wired.rs  tools_call_importers_wired.rs  tools_call_symbols_wired.rs  tools_call_wired.rs  tools_compact_mode.rs  tools_dead_code.rs  tools_format_markdown.rs  tools_include_uncertain.rs  tools_list.rs  tools_list_impact.rs  tools_minimal_context.rs  tools_rename_safety.rs  tools_risk.rs  watcher_helpers.rs  watcher_reindex_readonly.rs  watcher_smoke.rs
crates/ga-parser/: Cargo.toml  build.rs  grammar-pins.toml
crates/ga-parser/examples/: dump_csharp_kotlin_ast.rs  dump_kotlin_ast.rs  php_ast_debug.rs  php_heredoc_ast.rs  probe_rust_use.rs
crates/ga-parser/src/: calls.rs  change_detect.rs  extends.rs  imports.rs  lib.rs  limits.rs  logs.rs  merkle.rs  parallel_reparse.rs  references.rs  staleness.rs  threshold.rs  walk.rs  walker.rs
crates/ga-parser/tests/: callee_extractor_registration.rs  cargo_pin_strict.rs  change_detect.rs  csharp_preprocessor_strip.rs  csharp_skeleton.rs  engine_no_lang_match.rs  exotic_fs_arms.rs  exotic_fs_nfs_integration.rs  extract_bases_imports.rs  extract_calls.rs  extract_calls_arrow.rs  extract_calls_csharp.rs  extract_calls_java.rs  extract_calls_kotlin.rs  extract_calls_phase_a_kinds.rs  extract_calls_php.rs  extract_calls_python_decorator_audit.rs  extract_calls_ruby.rs  extract_calls_tsx_jsx.rs  extract_extends_csharp.rs  extract_extends_java.rs  extract_extends_kotlin.rs  extract_extends_php.rs  extract_extends_ruby.rs  extract_imports.rs  extract_imports_csharp.rs  extract_imports_java.rs  extract_imports_kotlin.rs  extract_imports_php.rs  extract_imports_ruby.rs  extract_references_csharp.rs  extract_references_csharp_scoped_call.rs  extract_references_java.rs  extract_references_java_scoped_call.rs  extract_references_kotlin.rs  extract_references_kotlin_scoped_call.rs  extract_references_php.rs  extract_references_python_scoped_call.rs  extract_references_rust_scoped_call.rs  extract_references_type_position.rs  (+34 more)
crates/ga-query/: Cargo.toml
crates/ga-query/examples/: dump_edge_counts.rs  dump_hub_files.rs
crates/ga-query/src/: architecture.rs  blame.rs  bridges.rs  callees.rs  common.rs  counts.rs  crate_scope.rs  dead_code.rs  entry_points.rs  file_summary.rs  hubs.rs  import_resolve.rs  importers.rs  incremental.rs  indexer.rs  large_functions.rs  lib.rs  minimal_context.rs  phase_b.rs  project_scope.rs  psr4_resolve.rs  rename_safety.rs  render.rs  risk.rs  snippet.rs  symbols.rs  ts_workspace.rs
crates/ga-query/tests/: _audit_rust_repos.rs  _diag_axum_minimal_context.rs  _diag_django_symbols.rs  _review_axum_3tasks.rs  build_index_read_only.rs  ga_architecture.rs  ga_bridges.rs  ga_dead_code.rs  ga_dead_code_module_scope.rs  ga_hubs.rs  (+86 more)
crates/ga-server/: Cargo.toml
(+482 files in other folders)
