[package]
name = "ga-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "GraphAtlas core data types — shared across ga-parser/ga-index/ga-query/ga-mcp"
publish = false

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[features]
# Feature flag for AS-003 demonstration: a test that panics to prove CI blocks merge.
# Never enabled in trunk. See CONTRIBUTING.md.
demo-red = []

[lints]
workspace = true
