[package]
name = "ga-index"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "GraphAtlas persistent graph index — lbug wrapper (S-003)"
publish = false

[dependencies]
ga-core = { workspace = true }
# v1.5 PR2: ga-parser provides merkle::compute_root_hash for indexed_root_hash
# population (foundation S-001 AS-001). ga-parser already depends on ga-core
# only — no cycle with ga-index.
ga-parser = { workspace = true }
anyhow = { workspace = true }
lbug = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.11"
uuid = { version = "1", features = ["v4"] }
hostname = "0.4"
fs4 = "0.13"
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
