[package]
name = "ga-index"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "GraphAtlas persistent graph index — lbug wrapper (S-003)"
publish = false

[dependencies]
ga-core = { workspace = true }
# v1.5 PR2: ga-parser provides merkle::compute_root_hash for indexed_root_hash
# population (foundation S-001 AS-001). ga-parser already depends on ga-core
# only — no cycle with ga-index.
ga-parser = { workspace = true }
anyhow = { workspace = true }
lbug = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.11"
uuid = { version = "1", features = ["v4"] }
hostname = "0.4"
fs4 = "0.13"
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"

# v1.5 PR6.1 (multi-mcp) M-3 — helper binary for multi-process lock
# scenarios in `tests/multi_process_lock.rs`. Spawned via
# `std::process::Command` from integration tests; reads sync line
# `READY\n` from its stdout before running assertions.
[[bin]]
name = "ga_index_lock_holder"
path = "tests/bin/lock_holder.rs"
test = false
doc = false
bench = false

# v1.5 PR6.1 (multi-mcp) cross-process lbug coexistence spike — verifies
# that two `graphatlas mcp` processes on the same repo can open lbug
# concurrently in their natural modes. See
# `crates/ga-index/examples/spike_lbug_cross_process.rs`.
[[bin]]
name = "ga_index_lbug_opener"
path = "tests/bin/lbug_opener.rs"
test = false
doc = false
bench = false

[lints]
workspace = true
