[package]
name = "ga-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "GraphAtlas MCP server — rmcp 1.5 stdio transport, MCP spec 2025-11-25 (v1.1 infra:S-003)"
publish = false

[dependencies]
ga-core = { workspace = true }
ga-index = { workspace = true }
# v1.5 PR5 — StalenessChecker for pre-tool gate (S-003 AS-007..012).
ga-parser = { workspace = true }
ga-query = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["io-util", "macros", "rt", "rt-multi-thread"] }
rmcp = { version = "1.7", default-features = false, features = ["server", "transport-async-rw", "transport-io", "macros", "client"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
# v1.5 PR8 — Layer 1 .git/-scoped FS watcher (triggers S-003 AS-007..011).
# `notify 6` ships `RecommendedWatcher` (inotify on Linux / FSEvents on
# macOS / RDCW on Windows) plus a `PollWatcher` fallback used for exotic
# filesystems (StPR5.AS-010 + watcher AS-009) and inotify ENOSPC
# recovery (AS-011).
notify = "6"
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["io-util", "macros", "rt-multi-thread", "time"] }

[lints]
workspace = true
