[package]
name = "ga-parser"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "GraphAtlas parser framework — LanguageSpec trait + tree-sitter impls (S-004)"
publish = false

[dependencies]
ga-core = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
tree-sitter = "0.25"
tree-sitter-python = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-rust = "0.24"
tree-sitter-java = "0.23"
tree-sitter-kotlin-ng = "1.1"
tree-sitter-c-sharp = "0.23"
tree-sitter-ruby = "0.23"
walkdir = "2"
ignore = "0.4"
blake3 = "1"
rayon = "1"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
